hphp/test/slow/readonly/basesc.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Property c of class Foo must be mutable.' in %s/basesc.php:13
%A
